<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardWrapHeight"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="20dp">
    <LinearLayout
        style="@style/LinearVerticalWrap"
        android:padding="20dp">
        <TextView
            style="@style/TextRegularNormal"
            android:text="@string/label_select_category"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/card_selected_category"
            style="@style/CardWrapHeight"
            android:layout_marginTop="10dp"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:foreground="?selectableItemBackground">
            <RelativeLayout
                style="@style/RelativeWrapH"
                android:padding="10dp">
                <ImageView
                    android:id="@+id/iv_category"
                    style="@style/ImageView40"
                    tools:src="@color/gray"/>
                <TextView
                    android:id="@+id/tv_category"
                    style="@style/TextBoldNormal"
                    tools:text="@string/app_name"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_marginStart="20dp"
                    android:layout_toEndOf="@id/iv_category"
                    android:layout_centerVertical="true"/>
                <ImageView
                    style="@style/ImageViewWrapAll"
                    android:src="@drawable/ic_baseline_navigate_next_24"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_budget"
            style="@style/TextInputLayoutDefault"
            android:layout_marginTop="10dp">
            <com.anangkur.budgetku.currencyEditText.CurrencyEditText
                android:id="@+id/et_budget"
                style="@style/EditTextDefault"
                android:hint="@string/hint_budget"
                android:inputType="number"
                android:imeOptions="actionDone"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_error"
            style="@style/TextRegularNormal"
            android:textColor="@color/red"
            android:layout_marginTop="10dp"
            tools:text="@string/app_name"
            android:visibility="gone"/>

        <LinearLayout
            style="@style/LinearHorizontalWrap"
            android:layout_marginTop="20dp">
            <com.anangkur.materialloadingbutton.MaterialLoadingButton
                android:id="@+id/btn_cancel"
                style="@style/ButtonDefault"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:mlb_textColor="@color/colorPrimary"
                app:mlb_defaultColor="@color/white"
                app:mlb_strokeColor="@color/colorPrimary"
                app:mlb_strokeWidth="1dp"
                app:mlb_cornerRadius="100dp"
                app:mlb_textButton="@string/btn_cancel"/>
            <com.anangkur.materialloadingbutton.MaterialLoadingButton
                android:id="@+id/btn_save"
                style="@style/ButtonDefault"
                android:layout_width="0dp"
                android:layout_weight="1"
                app:mlb_cornerRadius="100dp"
                app:mlb_defaultColor="@color/colorPrimary"
                app:mlb_textColor="@color/white"
                app:mlb_textButton="@string/btn_save"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>